examples/test_package/Double_dc_only_report_tool_new/steps/pl___coin__precise_run2/#test_results_result.txt
Error evaluating Problog model:
    return exec_func(node_id=node_id, node=node, **kwdargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 839, in eval_call
    raise UnknownClause(origin, location=loc)
problog.engine.UnknownClause: No clauses found for ''->'/2' at 7:12.% Problog Inference Result：
total(4) = 0.4096
total(3) = 0.4096
total(2) = 0.1536
total(1) = 0.0256
total(0) = 0.0016Error evaluating Problog model:
    return exec_func(node_id=node_id, node=node, **kwdargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 839, in eval_call
    raise UnknownClause(origin, location=loc)
problog.engine.UnknownClause: No clauses found for ''->'/2' at 7:12.% Problog Inference Result：
total(4) = 0.4096
total(3) = 0.4096
total(2) = 0.1536
total(1) = 0.0256
total(0) = 0.0016